@@ -265,11 +265,6 @@ static int pdo_sqlite_stmt_get_col(pdo_stmt_t *stmt, int colno, char **ptr, unsi
 		case SQLITE3_TEXT:
 			*ptr = (char*)sqlite3_column_text(S->stmt, colno);
 			*len = sqlite3_column_bytes(S->stmt, colno);
-			if (*len) {
-				/* sqlite3.h says "the NUL terminator is included in the byte count
-				 * for TEXT values" */
-				*len--;
-			}
 			return 1;
 		
 		default:
